Fix security and order logic bugs