@@ -2,7 +2,8 @@ package com.brokerage.infrastructure.security;
 
 import com.brokerage.domain.entity.User;
 import com.brokerage.domain.repository.UserRepository;
-import java.util.List;
+import java.util.Collections;
+import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.userdetails.UserDetails;
 import org.springframework.security.core.userdetails.UserDetailsService;
@@ -12,20 +13,18 @@ import org.springframework.stereotype.Service;
 @Service
 public class CustomUserDetailsService implements UserDetailsService {
 
-  private final UserRepository userRepository;
-
-  public CustomUserDetailsService(UserRepository userRepository) {
-    this.userRepository = userRepository;
-  }
+  @Autowired
+  private UserRepository userRepository; // Make sure you have this repository
 
   @Override
   public UserDetails loadUserByUsername(String username) throws UsernameNotFoundException {
     User user = userRepository.findByUsername(username)
-                              .orElseThrow(
-                                  () -> new UsernameNotFoundException("User not found with username: " + username));
+                              .orElseThrow(() -> new UsernameNotFoundException("User not found: " + username));
 
-    return new org.springframework.security.core.userdetails.User(user.getUsername(),
-                                                                  user.getPassword(),
-                                                                  List.of(new SimpleGrantedAuthority(user.getRole())));
+    return new org.springframework.security.core.userdetails.User(
+        user.getUsername(),
+        user.getPassword(),
+        Collections.singletonList(new SimpleGrantedAuthority(user.getRole()))
+    );
   }
 }
